Edit WebController and and Unit model

--- a/metal-compendium/src/main/resources/application.properties
+++ b/metal-compendium/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=metal-compendium
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-server.port=${APPLICATION_PORT}
+spring.datasource.url=jdbc:mariadb://192.168.2.2:3306/metalcompendium
+spring.datasource.username=metalicus
+spring.datasource.password=secret_password
+server.port=8008
+#spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
+#server.port=${APPLICATION_PORT}
